2016-02-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c (grid_status_draw_outline): Use simpler line join.

2016-02-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Use fixed-point scale and integer origin.

	* src/ftgrid.c (status): Change field types.
	(grid_status_init, grid_status_rescale_initial, grid_status_draw_grid,
	grid_hint_draw_segment, grid_status_draw_outline): Updated.

2016-02-07  Werner Lemberg  <wl@gnu.org>

	* Version 2.6.3 released.
	=========================


	Tag sources with `VER-2-6-3'.

	* README: Updated.
	* src/*.1: Updated.

2016-02-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_String_Draw): Typo.

2016-02-02  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgrid.c, src/ftview.c, src/testname.c: Remove math.h.

2016-02-02  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid] Fix dot position and shape.

	* src/ftgrid.c (circle_draw): Correct subpixel positioning.
	(ft_outline_new_circle): Correct circle approximation.

2016-02-01  Nikolaus Waxweiler  <madigens@gmail.com>

	[ftview] Fix toggling of `force auto-hinter' in light mode.

	Light mode does not imply auto-hinter anymore.

	* src/ftview.c (Process event) <'f'>: Update code.

2016-01-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdiff.c (render_state_init): Update default LCD filter.

2016-01-14  Werner Lemberg  <wl@gnu.org>

	Don't use macro names that start with `_[A-Z]' or contain `__'.

	Such macro names are reserved for both C and C++.

	* *.h: Harmonize ID macros so that file `foo.h' uses `FOO_H_'.
	* *.c: s/_Translator/Translator_'.

	* graph/x11/grx11.c (gr_x11_surface_init):
	s/_NET_WM_PID/NET_WM_PID/.
	* src/ftdiff.c: Replace structure names `_foo' with `foo_'.

2016-01-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftview] Cycle through available LCD filtering.

	* src/ftview.c (status, Process_Event): Implement cycle through
	`FT_LcdFilter'.
