@@ -1,3 +1,11 @@
+2016-02-12  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	[ftgrid] Display rendered bitmap (new feature).
+
+	* src/ftgrid.c (status): New field to control new feature.
+	(grid_status_draw_outline): Implement new feature here.
+	(Process_Event, usage): Updated.
+
 2016-02-10  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	* src/ftgrid.c (grid_status_draw_outline): Use simpler line join.
